src/test/deca/context/invalid/custom/object/wrong_affectation.deca
class Montagne{
    int hauteur = 0;
}

{
    Montagne moucherotte1 = new Montagne();
    Montagne chamechaude = new Montagne();
    Montagne moucherotte2 = moucherotte2;

}